--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,9 @@ $header_text_color: #ffffff;
 $header_border_color: rgba($header_text_color,.7);
 $grid_text_color: #ffffff;
 $grid_border_color: #414141;
+$admin_menu_background: #ccc;
+$admin_menu_color: #000000;
+$admin_menu_line_color: #999999;
 
 // Typography
 $my_font_size: 16px;
