--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,8 +9,20 @@
 @import 'node_modules/bootstrap/scss/bootstrap';
 
 body{
-    background-size: contain;
-    background-position: 50% -135px;
+
+}
+.body_background{
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    filter: brightness(0.6);
 }
 .header{
     display: flex;
@@ -114,6 +126,43 @@ footer{
         justify-content: center;
         width: 100%;
         color: $header_text_color;
+    }
+}
+.admin{
+    .header{
+        height: 100px;
+        .header_title{
+            margin: auto;
+        }
+    }
+    .admin_menu{
+        width: 100%;
+        background: $admin_menu_background;
+        padding: 5px 15px;
+        border-radius: 4px;
+        ul{
+            padding: 0;
+            list-style: none;
+            margin: 0;
+            display: flex;
+            flex-direction: row;
+            a{
+                color: $admin_menu_color;
+                border-radius: 4px;
+                .menu_item{
+                    padding: 0 10px;
+                }
+                &:hover{
+                    text-decoration: none;
+                    color: $admin_menu_line_color;
+                }
+            }
+            .line_to_right{
+                background: $admin_menu_line_color;
+                width: 2px;
+                margin-left: auto;
+            }
+        }
     }
 }
 
